--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -18,6 +18,7 @@
                  xmlns:controls="clr-namespace:OpenSky.Client.Controls"
                  mc:Ignorable="d" HorizontalScrollBar="False"
                  LoadingText="{Binding LoadingText}"
+                 Loaded="SettingsOnLoaded"
                  d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <models:SettingsViewModel />
