--- a/OpenSky.Client/Pages/FlightPlans.xaml
+++ b/OpenSky.Client/Pages/FlightPlans.xaml
@@ -18,6 +18,7 @@
                           xmlns:ui="http://schemas.modernwpf.com/2019"
                           xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
                           LoadingText="{Binding LoadingText}"
+                          HorizontalScrollBar="False"
                           Loaded="FlightPlansOnLoaded"
                           mc:Ignorable="d" 
                           d:DesignHeight="450" d:DesignWidth="800">
@@ -42,6 +43,11 @@
                          <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh flight plans [F5]" Command="{Binding RefreshPlansCommand}" />
                          <ui:AppBarButton Icon="Add" Label="New" ToolTip="Create a new flight plan" Command="{Binding NewPlanCommand}" />
                          <ui:AppBarButton Icon="Edit" Label="Edit" ToolTip="Edit the selected flight plan" Command="{Binding EditPlanCommand}" />
+                         <ui:AppBarButton Label="Start flight" ToolTip="Start flying the selected flight plan" Command="{Binding StartFlightCommand}">
+                             <ui:AppBarButton.Icon>
+                                 <ui:FontIcon Glyph="&#xE709;" />
+                             </ui:AppBarButton.Icon>
+                        </ui:AppBarButton>
                          <ui:AppBarButton Icon="Delete" Label="Delete" ToolTip="Delete the selected flight plan" Command="{Binding DeletePlanCommand}" />
                      </ui:CommandBar.PrimaryCommands>
                  </ui:CommandBar>
@@ -64,6 +70,7 @@
                         <DataGridTextColumn Header="Alternate" Binding="{Binding AlternateICAO}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Aircraft" Binding="{Binding Aircraft}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Utc Offset" Binding="{Binding UtcOffset}" />
+                        <DataGridTextColumn Header="Dispatcher" Binding="{Binding DispatcherName}" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
