Added most of my flight basics
Experimented with syncfusion datagrid but sticking to default one
Reduced planned departure time to 30 minutes from now (rounded up to next 5)

--- a/OpenSky.Client/Pages/FlightPlans.xaml
+++ b/OpenSky.Client/Pages/FlightPlans.xaml
@@ -57,20 +57,20 @@
                     SelectedItem="{Binding SelectedFlightPlan, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionUnit="FullRow"
                     HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" MinColumnWidth="120" HeadersVisibility="Column"
-                    ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}"
-                    >
+                    ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}">
                     <DataGrid.InputBindings>
                         <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding EditPlanCommand}" />
                     </DataGrid.InputBindings>
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Date" Binding="{Binding PlannedDepartureTime.DateTime, StringFormat=dd/MM/yyyy HH:mmZ}" />
-                        <DataGridTextColumn Header="Flight#" Binding="{Binding FlightNumber}" />
+                        <DataGridTextColumn Header="Planned departure" Binding="{Binding PlannedDepartureTime.DateTime, StringFormat=dd/MM/yyyy HH:mmZ}" />
+                        <DataGridTextColumn Header="Flight#" Binding="{Binding FullFlightNumber}" />
                         <DataGridTextColumn Header="Origin" Binding="{Binding OriginICAO}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Destination" Binding="{Binding DestinationICAO}" FontFamily="Consolas" FontSize="16" />
-                        <DataGridTextColumn Header="Alternate" Binding="{Binding AlternateICAO}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Aircraft" Binding="{Binding Aircraft}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Utc Offset" Binding="{Binding UtcOffset}" />
+                        <DataGridTextColumn Header="Airline pilot" />
                         <DataGridTextColumn Header="Dispatcher" Binding="{Binding DispatcherName}" />
+                        <DataGridTextColumn Header="Dispatcher remarks" Binding="{Binding DispatcherRemarks}" MinWidth="150" Width="1*" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
