--- a/OpenSky.Client/Pages/MyFlights.xaml
+++ b/OpenSky.Client/Pages/MyFlights.xaml
@@ -17,8 +17,9 @@
                       xmlns:controls="clr-namespace:OpenSky.Client.Controls"
                       xmlns:ui="http://schemas.modernwpf.com/2019"
                       xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
+                      xmlns:openSkyApi="clr-namespace:OpenSkyApi"
                       LoadingText="{Binding LoadingText}"
-                      HorizontalScrollBar="False"
+                      HorizontalScrollBar="False" Loaded="MyFlightsOnLoaded"
                       mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <models:MyFlightsViewModel />
@@ -26,15 +27,43 @@
     <UserControl.InputBindings>
         <KeyBinding Key="F5" Command="{Binding RefreshFlightsCommand}" />
     </UserControl.InputBindings>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:CommandBar Grid.Row="0" HorizontalContentAlignment="Left">
-            <ui:CommandBar.PrimaryCommands>
-                <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh my flights [F5]" Command="{Binding RefreshFlightsCommand}" />
-            </ui:CommandBar.PrimaryCommands>
-        </ui:CommandBar>
-    </Grid>
+    <GroupBox>
+        <GroupBox.Header>
+            <TextBlock FontSize="15" FontWeight="DemiBold">Manage Flights</TextBlock>
+        </GroupBox.Header>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <ui:CommandBar Grid.Row="0" HorizontalContentAlignment="Left">
+                <ui:CommandBar.PrimaryCommands>
+                    <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh my flights [F5]" Command="{Binding RefreshFlightsCommand}" />
+                </ui:CommandBar.PrimaryCommands>
+            </ui:CommandBar>
+            <DataGrid
+                Grid.Row="1"
+                ItemsSource="{Binding Flights}"
+                SelectedItem="{Binding SelectedFlight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionUnit="FullRow"
+                HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" MinColumnWidth="120" HeadersVisibility="Column"
+                ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}">
+                <DataGrid.Resources>
+                    <DataTemplate x:Key="FlightPausedCellTemplate" DataType="openSkyApi:Flight">
+                        <Image Source="{Binding FlightPausedImage}" Width="16" Height="16" />
+                    </DataTemplate>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridTemplateColumn Header="" CellTemplate="{StaticResource FlightPausedCellTemplate}" Width="20" MinWidth="20" />
+                    <DataGridTextColumn Header="Planned departure" Binding="{Binding PlannedDepartureTime.DateTime, StringFormat=dd/MM/yyyy HH:mmZ}" />
+                    <DataGridTextColumn Header="Flight#" Binding="{Binding FullFlightNumber}" />
+                    <DataGridTextColumn Header="Phase" Binding="{Binding FlightPhase}" />
+                    <DataGridTextColumn Header="Origin" Binding="{Binding Origin.Icao}" FontFamily="Consolas" FontSize="16" />
+                    <DataGridTextColumn Header="Destination" Binding="{Binding Destination.Icao}" FontFamily="Consolas" FontSize="16" />
+                    <DataGridTextColumn Header="Aircraft" Binding="{Binding Aircraft}" FontFamily="Consolas" FontSize="16" />
+
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </GroupBox>
 </controls:OpenSkyPage>
