--- a/OpenSky.Client/Pages/MyFlights.xaml
+++ b/OpenSky.Client/Pages/MyFlights.xaml
@@ -39,6 +39,12 @@
             <ui:CommandBar Grid.Row="0" HorizontalContentAlignment="Left">
                 <ui:CommandBar.PrimaryCommands>
                     <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh my flights [F5]" Command="{Binding RefreshFlightsCommand}" />
+                    <ui:AppBarButton Label="Resume flight" ToolTip="Resume the selected paused flight." Command="{Binding ResumeFlightCommand}">
+                        <ui:AppBarButton.Icon>
+                            <ui:FontIcon Glyph="&#xE709;" />
+                        </ui:AppBarButton.Icon>
+                    </ui:AppBarButton>
+                    <ui:AppBarButton Icon="Cancel" Label="Abort flight" ToolTip="Abort the selected flight." Command="{Binding AbortFlightCommand}" />
                 </ui:CommandBar.PrimaryCommands>
             </ui:CommandBar>
             <DataGrid
