--- a/OpenSky.Client/Pages/FlightPlans.xaml
+++ b/OpenSky.Client/Pages/FlightPlans.xaml
@@ -70,7 +70,7 @@
                         <DataGridTextColumn Header="Utc Offset" Binding="{Binding UtcOffset}" />
                         <DataGridTextColumn Header="Airline pilot" />
                         <DataGridTextColumn Header="Dispatcher" Binding="{Binding DispatcherName}" />
-                        <DataGridTextColumn Header="Dispatcher remarks" Binding="{Binding DispatcherRemarks}" MinWidth="150" Width="1*" />
+                        <DataGridTextColumn Header="Dispatcher remarks" Binding="{Binding DispatcherRemarks}" MinWidth="150" Width="1*" FontFamily="Consolas" FontSize="11" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
