--- a/OpenSky.Client/Pages/FlightPlan.xaml
+++ b/OpenSky.Client/Pages/FlightPlan.xaml
@@ -1,6 +1,6 @@
 ﻿<!-- 
 ====================================================================================================================
-<copyright file="MyFleet.xaml" company="OpenSky">
+<copyright file="FlightPlan.xaml" company="OpenSky">
   OpenSky project 2021
 </copyright>
 <summary>
